feat: test schedule event api
